methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:2: error: value Green is not a member of object java.awt.Color
  motif(Color.Green)
              ^